<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
     android:orientation="vertical"
     android:scrollbars="vertical"
    android:layout_height="wrap_content"
    android:background="@color/textShadow" >

    <ScrollView
        android:id="@+id/scrollView1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical" >

            <TextView
                android:id="@+id/view_home_kent1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                android:text="@string/reg"
                android:textAppearance="?android:attr/textAppearanceMedium" />

            <TextView
                android:id="@+id/tvm_medica_status"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/fname"
                android:textAppearance="?android:attr/textAppearanceSmall" />

            <EditText
                android:id="@+id/edRegFName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="text"
                 />

            <TextView
                android:id="@+id/textView2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/lname"
                android:textAppearance="?android:attr/textAppearanceSmall" />

            <EditText
                android:id="@+id/edRegLName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="text"
                 />

            <TextView
                android:id="@+id/textView3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/email"
                android:textAppearance="?android:attr/textAppearanceSmall" />

            <EditText
                android:id="@+id/edRegEmail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="textEmailAddress"
               />

            <TextView
                android:id="@+id/textView9"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/regpassword"
                android:textAppearance="?android:attr/textAppearanceSmall" />

            <EditText
                android:id="@+id/edRegPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="textPassword"
                android:text="@string/emptystring" />

            <TextView
                android:id="@+id/textView_6"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Who refer you for Shifa App? Put his/her email id and Let him/her became paid user.TC apply"
                android:textAppearance="?android:attr/textAppearanceSmall" />

            <EditText
                android:id="@+id/edRegReferEmailId"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="nazimd@gmail.com"
                android:inputType="text"
                android:text="@string/emptystring" />

             
            
            <TextView
                android:id="@+id/textView4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/DOB"
                android:textAppearance="?android:attr/textAppearanceSmall" />

            <EditText
                android:id="@+id/edRegDob"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:text="@string/emptystring" />

            <TextView
                android:id="@+id/textView5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/Sex"
                android:textAppearance="?android:attr/textAppearanceSmall" />

            <RadioGroup
                android:id="@+id/radioSex"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" >

                <RadioButton
                    android:id="@+id/radioMale"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:checked="true"
                    android:text="@string/radio_male" />

                <RadioButton
                    android:id="@+id/radioFemale"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/radio_female" />
            </RadioGroup>

            <TextView
                android:id="@+id/textView6"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/City"
                android:textAppearance="?android:attr/textAppearanceSmall" />

            <EditText
                android:id="@+id/edRegCity"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="text"
                android:text="@string/emptystring" />

            <TextView
                android:id="@+id/textView7"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/Country"
                android:textAppearance="?android:attr/textAppearanceSmall" />

            <EditText
                android:id="@+id/edRegCountry"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:text="@string/emptystring" />

            <TextView
                android:id="@+id/textView8"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/occu"
                android:textAppearance="?android:attr/textAppearanceSmall" />

            <RadioGroup
                android:id="@+id/radioOcc"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" >

                <RadioButton
                    android:id="@+id/radio_occu_Student"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:checked="true"
                    android:text="@string/radio_occu_student" />

                <RadioButton
                    android:id="@+id/radio_occu_doctor"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/radio_occu_doctor" />
            </RadioGroup>

            
            <Button
                android:id="@+id/btnRegister"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/regBtn" />
        </LinearLayout>

    </ScrollView>

    </LinearLayout>
	 